<resources>
    <string name="package_name">svl.kadatha.filex</string>
	<string name="application_name">FileX Manager</string>
    <string name="hide">Hide</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
    <string name="close">Close</string>
	<string name="ok">OK</string>
	<string name="list_name_colon">List Name</string>
	<string name="enter_name">Enter name</string>
	<string name="save">Save</string>
	<string name="file_has_been_modified_do_you_want_save_the_file">File has been modified. Do you want to save the file?</string>
    <string name="deleted_selected_audios">Deleted selected audios.</string>
	<string name="wait_till_all_audios_populated">Wait till all audios are populated in All Songs tab.</string>
	<string name="added_audios_current_play_list">Added selected audios to the current playing list.</string>
	<string name="added_audios_to">Added selected audios to</string>
	<string name="permission_not_granted">Permission was not granted.</string>
	<string name="audio_list_created">audio list created.</string>
	<string name="avoid_name_involving_special_characters">Avoid name involving characters \'\\*:?/\' and new line characters</string>
	<string name="maximum_3_services_processed">Maximum 3 services only be processed at a time.</string>
	<string name="directory_not_exist_not_valid">Directory does not exist or not valid.</string>
	<string name="extract">Extract</string>
	<string name="enter_output_folder_name">Enter output folder name.</string>
	<string name="a_file_with_folder_name_exists_in_selected_directory">A file with output folder name already exists in the selected directory.</string>
    <string name="archiving">Archiving</string>
	<string name="archive_file">Archive File</string>
	<string name="extracting">Extracting</string>
	<string name="output_folder">Output Folder</string>
	<string name="deleting">Deleting</string>
	<string name="moving">Moving</string>
	<string name="copying">Copying</string>
	<string name="extracted">Extracted</string>
	<string name="deleted">Deleted</string>
	<string name="choose_directory">Choose directory</string>
	<string name="archive">Archive</string>
	<string name="output_file">Output file</string>
	<string name="enter_file_name">Enter file name</string>
	<string name="file_name">File name</string>
	<string name="enter_folder_name">Enter folder name</string>
	<string name="folder_name">Folder name</string>
	<string name="delete">Delete</string>
	<string name="back">Back</string>
	<string name="root_directory">Root Directory</string>
    <string name="clear">Clear</string>
	<string name="rename">Rename</string>
	<string name="add_to_list">Add to list</string>
	<string name="saved_lists">Saved lists</string>
	<string name="no_file_found">No file found</string>
	<string name="select_app">Select app</string>
	<string name="remember_the_choice">Remember the choice</string>
	<string name="create_folder">Create folder</string>
	<string name="destination_folder">Destination folder</string>
	<string name="replace_file">Replace File</string>
	<string name="wait_till_the_process_completes">Wait till the process completes…</string>
	<string name="create_file">Create File</string>
	<string name="from">From</string>
	<string name="to">To</string>
	<string name="current_file">Current File</string>
	<string name="settings">Settings</string>
	<string name="end_of_line">End of line</string>
	<string name="wrap_text">Wrap text</string>
	<string name="text_size">Text size</string>
	<string name="edit">Edit</string>
	<string name="choose_folder">Choose Folder</string>
	<string name="current_folder">Current Folder</string>
	<string name="folder_is_empty">Folder is empty.</string>
	<string name="permissions">Permissions</string>
	<string name="read">Read</string>
	<string name="write">Write</string>
	<string name="execute">Execute</string>
	<string name="owner">Owner</string>
	<string name="group">Group</string>
	<string name="other">Other</string>
	<string name="file_size_display">File size display</string>
	<string name="block_1024">Block 1024</string>
	<string name="block_1000">Block 1000</string>
	<string name="default_apps_to_open_files">Default apps to open files</string>
	<string name="remove_defaults">Remove defaults</string>
	<string name="properties">Properties</string>
	<string name="directories">Directories</string>
	<string name="recent">Recent</string>
	<string name="apply_to_all_similarly_named_files">Apply to all similarly named files</string>
	<string name="storage_access_permission">Storage Access Permission</string>
	<string name="search">Search</string>
	<string name="whole_word">Whole word</string>
	<string name="case_sensitive">Case sensitive</string>
	<string name="regex">Regex</string>
	<string name="file_directory">File/Directory</string>
	<string name="search_in">Search in</string>
	<string name="open_as">Open as</string>
	<string name="view">View</string>
	<string name="layout">Layout</string>
	<string name="list">List</string>
	<string name="grid">Grid</string>
	<string name="font_size">Font size</string>
	<string name="small">Small</string>
	<string name="medium">Medium</string>
	<string name="large">Large</string>
	<string name="date">Date</string>
	<string name="working_directory">Working Directory</string>
	<string name="add">Add</string>
	<string name="remove">Remove</string>
	<string name="library">Library</string>
	<string name="show_hidden_files">Show hidden files</string>
	<string name="audio_player">Audio Player</string>
	<string name="browse">Browse</string>
	<string name="are_you_sure_to_delete_the_selected_file">Are you sure to delete the selected file?</string>
	<string name="are_you_sure_to_delete_the_selected_files">Are you sure to delete the selected files?</string>
	<string name="a_file_with_same_already_exists_do_you_want_to_replace_it">A file with same name already exists. Do you want to replace it?</string>
	<string name="a_folder_with_same_already_exists_do_you_want_to_overwrite_it">A folder with same name already exists. Do you want to overwrite it?</string>
	<string name="remove_selected">Remove selected</string>
    <string name="file_type">File type</string>
	<string name="app_name">App name</string>
	<string name="total_files">Total files</string>
	<string name="size">Size</string>
	<string name="modified">Modified</string>
	<string name="readable">Readable</string>
	<string name="writable">Writable</string>
	<string name="hidden">Hidden</string>
	<string name="symbolic_link">Symbolic link</string>
	<string name="remove_default_apps">Remove default apps</string>
	<string name="external_sd_card_permission_message">You need to give permission by selecting \'SD card\' to access files on external SD card.</string>
	<string name="external_usb_permission_message">You need to give permission by selecting \'USB device\' to access files on USB storage.</string>
	<string name="name">Name</string>
	<string name="type">Type</string>
	<string name="document">Document</string>
	<string name="image">Image</string>
	<string name="audio">Audio</string>
	<string name="video">Video</string>
	<string name="apk">APK</string>
	<string name="deleted_selected_files">Deleted selected files at</string>
	<string name="could_not_delete_selected_files">Could not delete selected files at</string>
	<string name="moved_selected_files">Moved selected files to</string>
	<string name="could_not_move_selected_files">Could not move selected files to</string>
	<string name="copied_selected_files">Copied selected files to</string>
	<string name="could_not_copy_selected_files">Could not copy selected files to</string>
	<string name="could_not_create">Could not create</string>
	<string name="could_not_extract">Could not extract</string>
	<string name="created">Created</string>
	<string name="unzipped">Unzipped</string>
	<string name="to_symbol">=></string>
	<string name="at">-></string>
	<string name="moving_files">Moving files</string>
	<string name="copying_files">Copying files</string>
	<string name="deleting_files">Deleting files</string>
	<string name="a_directory_with_output_file_name_already_exists">A directory with output file name already exists.</string>
	<string name="enter_zip_file_name">Enter zip file name</string>
	<string name="album_colon">Album:</string>
	<string name="artists_colon">Artists:</string>
	<string name="next_audio_colon">Next audio:</string>
	<string name="files">files</string>
	<string name="file1">file</string>
	<string name="refresh">Refresh</string>
	<string name="exit">Exit</string>
	<string name="paste">Paste</string>
	<string name="new_">New</string>
	<string name="cut">Cut</string>
	<string name="copy">Copy</string>
	<string name="more">More</string>
	<string name="compress">Compress</string>
	<string name="play">Play</string>
	<string name="tracks">Tracks</string>
	<string name="duration">Duration</string>
	<string name="not_able_to_process">not able to process</string>
	<string name="wait_till_all_audios_populated_in_all_songs_tab">wait till all audios are populated in All Songs tab</string>
	<string name="removed_the_selected_audios">Removed the selected audios</string>
	<string name="create_new_list">Create new list</string>
	<string name="add_to_current_play_list">Add to current play list</string>
	<string name="undo">Undo</string>
	<string name="redo">Redo</string>
	<string name="file_not_found">File not found</string>
	<string name="cant_edit_this_file">can\'t edit this file</string>
	<string name="file_is_big">File is big</string>
	<string name="maximum_2_services_only_be_processed_at_a_time">Maximum 2 services only be processed at a time.</string>
	<string name="file_could_not_be_saved">File could not be saved.</string>
	<string name="opening_the_file">Opening the file</string>
	<string name="file_could_not_be_opened">File could not be opened.</string>
	<string name="set_as_wallpaper">Set as Wallpaper</string>
	<string name="could_not_be_set_as_wallpaper">could not be set as wallpaper</string>
    <string name="set_as_ringtone">Set as ringtone</string>
	<string name="now_ringtone_can_be_set">Now ringtone can be set</string>
	<string name="ringtone_set">Ringtone is set</string>
    <string name="up">Up</string>
	<string name="down">Down</string>
    <string name="filex_text_editor">FileX Text Editor</string>
	<string name="filex_pdf_viewer">FileX PDF Viewer</string>
	<string name="filex_audio_player">FileX Audio Player</string>
	<string name="filex_image_viewer">FileX Image Viewer</string>
	<string name="filex_video_player">FileX Video Player</string>
	<string name="filex_file_selector">FileX File Selector</string>
    <string name="renamed">Renamed</string>
	<string name="could_not_be_renamed">could not be renamed</string>
    <string name="file">File</string>
	<string name="directory">Directory</string>
	<string name="file_can_not_be_created_here">File can not be created here.</string>
	<string name="new_file_can_not_be_created_a_file_with_the_specified_name_exists">New file can not be created. A file with the specified name already exists</string>
	<string name="folder">Folder</string>
	<string name="please_wait">please wait</string>
	<string name="current_play">Current Play</string>
	<string name="album">Album</string>
	<string name="audio_list">Audio list</string>
	<string name="all_songs">All songs</string>
    <string name="searching">Searching</string>
    <string name="can_not_open_file">can\'t open file</string>
    <string name="wait_ellipse">Wait…</string>
    <string name="more_than_20_directories_cannot_be_added">More than 20 directories cannot be added</string>
	<string name="select_directories_by_long_pressing">Select directories by long pressing</string>
    <string name="sort">Sort</string>
	<string name="port">Port</string>
	<string name="user_name">User name</string>
	<string name="password">Password</string>
	<string name="ftp_server_details">FTP server details</string>
</resources>