<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	
	<TextView

		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/dialog_title"
		android:text="@string/permissions"
		android:textSize="18sp"
		android:paddingStart="@dimen/eight_dp"
		android:paddingEnd="@dimen/eight_dp"
		android:paddingTop="@dimen/layout_margin"
		android:paddingBottom="@dimen/layout_margin"

	/>

<TableLayout
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:background="?attr/dialog_background"
	android:layout_marginTop="@dimen/layout_margin"
	android:padding="@dimen/eight_dp"

	>
	<TableRow
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
	>
		<TextView
			android:layout_height="wrap_content"
			android:text=""
			
		/>
		<TextView
			android:layout_height="wrap_content"
			android:text="@string/read"
			android:textSize="16sp"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="10dp"
		
		/>
		<TextView
			android:layout_height="wrap_content"
			android:text="@string/write"
			android:textSize="16sp"
			android:layout_marginStart="10dp"
			android:layout_marginEnd="10dp"
			
		/>
		<TextView
			android:layout_height="wrap_content"
			android:text="@string/execute"
			android:textSize="16sp"
			
		/>
	
	</TableRow>
	
	<TableRow
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		
		>
		<TextView
			android:layout_height="wrap_content"
			android:text="@string/owner"
			android:textSize="16sp"
			android:layout_gravity="center_vertical"
			/>
		<CheckBox
			android:layout_height="wrap_content"
			android:id="@+id/fragment_permissions_owner_read_chkbox"
			android:layout_gravity="center"

			/>

		<CheckBox
			android:layout_height="wrap_content"
			android:id="@+id/fragment_permissions_owner_write_chkbox"
			android:layout_gravity="center"

		/>

		<CheckBox
			android:layout_height="wrap_content"
			android:id="@+id/fragment_permissions_owner_execute_chkbox"
			android:layout_gravity="center"

		/>
	</TableRow>
	
	<TableRow
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		
	>
		<TextView
			android:layout_height="wrap_content"
			android:text="@string/group"
			android:textSize="16sp"
			android:layout_gravity="center_vertical"
		/>
		<CheckBox
			android:layout_height="wrap_content"
			android:id="@+id/fragment_permissions_group_read_chkbox"
			android:layout_gravity="center"

		/>

		<CheckBox
			android:layout_height="wrap_content"
			android:id="@+id/fragment_permissions_group_write_chkbox"
			android:layout_gravity="center"

		/>

		<CheckBox
			android:layout_height="wrap_content"
			android:id="@+id/fragment_permissions_group_execute_chkbox"
			android:layout_gravity="center"

		/>
	</TableRow>
	<TableRow
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
	>
		<TextView
			android:layout_height="wrap_content"
			android:text="@string/other"
			android:textSize="16sp"
			android:layout_gravity="center_vertical"
		/>
		<CheckBox
			android:layout_height="wrap_content"
			android:id="@+id/fragment_permissions_other_read_chkbox"
			android:layout_gravity="center"

		/>

		<CheckBox
			android:layout_height="wrap_content"
			android:id="@+id/fragment_permissions_other_write_chkbox"
			android:layout_gravity="center"

		/>

		<CheckBox
			android:layout_height="wrap_content"
			android:id="@+id/fragment_permissions_other_execute_chkbox"
			android:layout_gravity="center"

		/>
	</TableRow>
	</TableLayout>


	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/layout_margin"
		android:id="@+id/fragment_permissions_button_layout"
	/>
    
</LinearLayout>

