<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/ftp_credential_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ftp_server_details"
        android:paddingStart="@dimen/ten_dp"
        android:paddingEnd="@dimen/ten_dp"
        android:paddingTop="@dimen/layout_margin"
        android:paddingBottom="@dimen/layout_margin"
        android:background="?attr/dialog_title"
        android:textSize="18sp"
        android:layout_gravity="top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_margin"
        app:layout_constraintTop_toBottomOf="@id/ftp_credential_title"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="?attr/dialog_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/fragment_server_background_padding"


                />
            <TextView
                android:id="@+id/ftp_server_port_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:gravity="start"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ftp_server_port_input"
                android:paddingStart="@dimen/ten_dp"
                android:paddingEnd="@dimen/layout_margin"
                android:paddingTop="@dimen/layout_margin"
                android:paddingBottom="@dimen/layout_margin"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ftp_server_port_input"
                android:includeFontPadding="false"
                app:layout_constraintStart_toEndOf="@id/ftp_server_port_label"
                app:layout_constraintBottom_toBottomOf="@id/ftp_server_port_label"
                app:layout_constraintEnd_toEndOf="parent"
                android:inputType="number"
                android:singleLine="true"
                android:digits="0123456789"
                android:layout_marginEnd="@dimen/ten_dp"
                />

            <TextView
                android:id="@+id/ftp_server_user_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:gravity="start"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ftp_server_port_label"
                app:layout_constraintEnd_toStartOf="@id/ftp_server_user_input"
                android:paddingStart="@dimen/ten_dp"
                android:paddingEnd="@dimen/layout_margin"
                android:paddingTop="@dimen/layout_margin"
                android:paddingBottom="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ftp_server_user_input"
                android:includeFontPadding="false"
                app:layout_constraintStart_toEndOf="@id/ftp_server_user_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/ftp_server_user_label"
                android:inputType="text"
                android:layout_marginEnd="@dimen/ten_dp"
                />


            <TextView
                android:id="@+id/ftp_server_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:gravity="start"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ftp_server_user_label"
                app:layout_constraintEnd_toStartOf="@id/ftp_server_pword_input"
                android:paddingStart="@dimen/ten_dp"
                android:paddingEnd="@dimen/layout_margin"
                android:paddingTop="@dimen/layout_margin"
                android:paddingBottom="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ftp_server_pword_input"
                android:includeFontPadding="false"
                app:layout_constraintStart_toEndOf="@id/ftp_server_password_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/ftp_server_password_label"
                android:inputType="text"
                android:layout_marginEnd="@dimen/ten_dp"
                />

            <TextView
                android:id="@+id/ftp_server_chroot_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directory"
                android:gravity="start"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ftp_server_password_label"
                app:layout_constraintEnd_toStartOf="@id/ftp_server_chroot_spinner_input"
                android:paddingStart="@dimen/ten_dp"
                android:paddingEnd="@dimen/layout_margin"
                android:paddingTop="@dimen/layout_margin"
                android:paddingBottom="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"

                />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/ftp_server_chroot_spinner_input"
                android:includeFontPadding="false"
                app:layout_constraintStart_toEndOf="@id/ftp_server_chroot_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/ftp_server_chroot_label"
                app:layout_constraintBottom_toBottomOf="@id/ftp_server_chroot_label"
                android:textSize="16sp"

                />
            <View
                android:id="@+id/fragment_server_background_padding"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ftp_server_chroot_label"
                />



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ftp_server_credential_button_layout"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_server_background_padding"
                android:elevation="6dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



